# vigenere-cipher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main
src/: decoding.c  decoding.h  encoding.c  encoding.h  frequency-table.txt  hacking-alg.c  hacking-alg.h  main.c
